{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 393,
  "lineage": "31a7c920-e03c-2452-b7ac-3d5b70c25bc4",
  "resources": [
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "foryou_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d838d56ea62f74a",
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:elastic-ip/eipalloc-08d838d56ea62f74a",
            "association_id": "eipassoc-0a778462fd4e71f2f",
            "domain": "vpc",
            "id": "eipalloc-08d838d56ea62f74a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-00f7536fd8f9e3d2a",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-38-6-4.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.6.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:internet-gateway/igw-09245d9f2818c4d34",
            "id": "igw-09245d9f2818c4d34",
            "owner_id": "339713119714",
            "tags": {
              "Name": "foryou-ig"
            },
            "tags_all": {
              "Name": "foryou-ig"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d838d56ea62f74a",
            "association_id": "eipassoc-0a778462fd4e71f2f",
            "connectivity_type": "public",
            "id": "nat-0496f3bdf780dccd7",
            "network_interface_id": "eni-00f7536fd8f9e3d2a",
            "private_ip": "10.0.0.11",
            "public_ip": "3.38.6.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d3b134b8abba8ae",
            "tags": {
              "Name": "foryou-ngw"
            },
            "tags_all": {
              "Name": "foryou-ngw"
            }
          },
          "dependencies": [
            "module.foryou_vpc.aws_eip.foryou_eip",
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-05e92c4de7ffc41cb",
            "id": "rtb-05e92c4de7ffc41cb",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0496f3bdf780dccd7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foryou-nrt"
            },
            "tags_all": {
              "Name": "foryou-nrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_eip.foryou_eip",
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_nat_gateway.nat_gateway",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:route-table/rtb-0f5005891c34361cf",
            "id": "rtb-0f5005891c34361cf",
            "owner_id": "339713119714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09245d9f2818c4d34",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foryou-rt"
            },
            "tags_all": {
              "Name": "foryou-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nrtas_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e874b73a1371e7d",
            "route_table_id": "rtb-05e92c4de7ffc41cb",
            "subnet_id": "subnet-0f9a693648476f246"
          },
          "dependencies": [
            "module.foryou_vpc.aws_eip.foryou_eip",
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_nat_gateway.nat_gateway",
            "module.foryou_vpc.aws_route_table.nat_route_table",
            "module.foryou_vpc.aws_subnet.db",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e29066923c892a89",
            "route_table_id": "rtb-05e92c4de7ffc41cb",
            "subnet_id": "subnet-00ee8a634808b1fb7"
          },
          "dependencies": [
            "module.foryou_vpc.aws_eip.foryou_eip",
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_nat_gateway.nat_gateway",
            "module.foryou_vpc.aws_route_table.nat_route_table",
            "module.foryou_vpc.aws_subnet.db",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nrtas_was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6f581f0e32e708d",
            "route_table_id": "rtb-05e92c4de7ffc41cb",
            "subnet_id": "subnet-0ecef5de7414f18f7"
          },
          "dependencies": [
            "module.foryou_vpc.aws_eip.foryou_eip",
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_nat_gateway.nat_gateway",
            "module.foryou_vpc.aws_route_table.nat_route_table",
            "module.foryou_vpc.aws_subnet.was",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4060b038892fc2e",
            "route_table_id": "rtb-05e92c4de7ffc41cb",
            "subnet_id": "subnet-053faa3871ea8d37e"
          },
          "dependencies": [
            "module.foryou_vpc.aws_eip.foryou_eip",
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_nat_gateway.nat_gateway",
            "module.foryou_vpc.aws_route_table.nat_route_table",
            "module.foryou_vpc.aws_subnet.was",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtas_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dfe8854758fb6c4",
            "route_table_id": "rtb-0f5005891c34361cf",
            "subnet_id": "subnet-06d3b134b8abba8ae"
          },
          "dependencies": [
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_route_table.route_table",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537870039a5f3b0c",
            "route_table_id": "rtb-0f5005891c34361cf",
            "subnet_id": "subnet-045c683b13f5a5c5f"
          },
          "dependencies": [
            "module.foryou_vpc.aws_internet_gateway.internet_gateway",
            "module.foryou_vpc.aws_route_table.route_table",
            "module.foryou_vpc.aws_subnet.web",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0f19ed1bd6a22af0b",
            "description": "http-https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f19ed1bd6a22af0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-03c4e7abaa6f8d910",
            "description": "ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c4e7abaa6f8d910",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-sg"
            },
            "tags_all": {
              "Name": "ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-06e521296f20c383a",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e521296f20c383a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-03b617bd38c023f17",
            "description": "mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b617bd38c023f17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03582aa334d7b2322"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_security_group.alb_sg",
            "module.foryou_vpc.aws_security_group.nlb_sg",
            "module.foryou_vpc.aws_security_group.was_sg",
            "module.foryou_vpc.aws_security_group.web_sg",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0417776b0a7723e1a",
            "description": "default-ssh-imcp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0417776b0a7723e1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-sg"
            },
            "tags_all": {
              "Name": "default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nlb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-0e01d9ab18430dd1d",
            "description": "tomcat",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e01d9ab18430dd1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d644094333a0120"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nlb_sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nlb_sg"
            },
            "tags_all": {
              "Name": "nlb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_security_group.alb_sg",
            "module.foryou_vpc.aws_security_group.web_sg",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-03582aa334d7b2322",
            "description": "http(tomcat)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03582aa334d7b2322",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http(tomcat)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e01d9ab18430dd1d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "was-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "was-sg"
            },
            "tags_all": {
              "Name": "was-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_security_group.alb_sg",
            "module.foryou_vpc.aws_security_group.nlb_sg",
            "module.foryou_vpc.aws_security_group.web_sg",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-06d644094333a0120",
            "description": "http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d644094333a0120",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f19ed1bd6a22af0b"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f19ed1bd6a22af0b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_security_group.alb_sg",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:security-group/sg-09cbd6aa4f38ef750",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cbd6aa4f38ef750",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-cluster-worker-sg",
            "name_prefix": "",
            "owner_id": "339713119714",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-worker-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3026548714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06e521296f20c383a",
            "security_group_rule_id": "sgr-0a0d16b1c3049e0f6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foryou_vpc.aws_security_group.cluster_sg",
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0f9a693648476f246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9a693648476f246",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-db-pri-a"
            },
            "tags_all": {
              "Name": "foryou-db-pri-a"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-00ee8a634808b1fb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ee8a634808b1fb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-db-pri-c"
            },
            "tags_all": {
              "Name": "foryou-db-pri-c"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-0ecef5de7414f18f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecef5de7414f18f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-was-pri-a",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "foryou-was-pri-a",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-053faa3871ea8d37e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053faa3871ea8d37e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-was-pri-c",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "foryou-was-pri-c",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-06d3b134b8abba8ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d3b134b8abba8ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-web-pub-a",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "foryou-web-pub-a",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:subnet/subnet-045c683b13f5a5c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045c683b13f5a5c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713119714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foryou-web-pub-c",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "foryou-web-pub-c",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-0abf6e84cc6d00f0d"
          },
          "dependencies": [
            "module.foryou_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.foryou_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:339713119714:vpc/vpc-0abf6e84cc6d00f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0770bc5d2df4185",
            "default_route_table_id": "rtb-0ec4e7472d3db379d",
            "default_security_group_id": "sg-05d5cd266692c9a35",
            "dhcp_options_id": "dopt-0a67717d8f23193c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0abf6e84cc6d00f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec4e7472d3db379d",
            "owner_id": "339713119714",
            "tags": {
              "Name": "foryou-vpc"
            },
            "tags_all": {
              "Name": "foryou-vpc"
            }
          }
        }
      ]
    }
  ]
}